--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -2,17 +2,121 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Mohammad Mirzadeh at 2014-09-03 17:35:14 -0700 
+%% Created for Mohammad Mirzadeh at 2014-09-05 10:20:44 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@misc{p4est-github,
+	Date-Added = {2014-09-05 17:17:06 +0000},
+	Date-Modified = {2014-09-05 17:20:44 +0000},
+	Howpublished = {\url{http://p4est.github.io}},
+	url = {http://p4est.github.io},
+	Title = {\texttt{p4est}: {Parallel Adaptive Mesh Refinement on Forests of Octrees}}}
+
+
+@article{Sampath;Biros:10:A-parallel-geometric,
+	Author = {Sampath, Rahul S and Biros, George},
+	Date-Added = {2014-09-05 17:14:42 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {SIAM Journal on Scientific Computing},
+	Number = {3},
+	Pages = {1361--1392},
+	Publisher = {SIAM},
+	Title = {A parallel geometric multigrid method for finite elements on octree meshes},
+	Volume = {32},
+	Year = {2010}}
+
+@inproceedings{Sampath;Adavani;Sundar;etal:08:Dendro:-parallel-alg,
+	Author = {Sampath, Rahul S and Adavani, Santi S and Sundar, Hari and Lashuk, Ilya and Biros, George},
+	Booktitle = {Proceedings of the 2008 ACM/IEEE conference on Supercomputing},
+	Date-Added = {2014-09-05 17:14:10 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Organization = {IEEE Press},
+	Pages = {18},
+	Title = {Dendro: parallel algorithms for multigrid and AMR methods on 2: 1 balanced octrees},
+	Year = {2008}}
+
+@article{Campbell;Devine;Flaherty;etal:03:Dynamic-octree-load-,
+	Author = {Campbell, Paul M and Devine, Karen D and Flaherty, Joseph E and Gervasio, Luis G and Teresco, James D},
+	Date-Added = {2014-09-05 01:17:07 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {Williams College Department of Computer Science, Tech. Rep. CS-03-01},
+	Title = {Dynamic octree load balancing using space-filling curves},
+	Year = {2003}}
+
+@inproceedings{Aluru;Sevilgen:97:Parallel-domain-deco,
+	Author = {Aluru, Srinivas and Sevilgen, F},
+	Booktitle = {High-Performance Computing, 1997. Proceedings. Fourth International Conference on},
+	Date-Added = {2014-09-05 01:09:49 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Organization = {IEEE},
+	Pages = {230--235},
+	Title = {Parallel domain decomposition and load balancing using space-filling curves},
+	Year = {1997}}
+
+@article{Bangerth;Hartmann;Kanschat:07:deal.II----a-General,
+	Author = {W. Bangerth and R. Hartmann and G. Kanschat},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {ACM Trans. Math. Softw.},
+	Number = 4,
+	Pages = {24/1--24/27},
+	Title = {{deal.II} -- a General Purpose Object Oriented Finite Element Library},
+	Volume = 33,
+	Year = 2007}
+
+@article{Boman;Catalyurek;Chevalier;etal:12:The-Zoltan-and-Isorr,
+	Author = {Boman, Erik G and {\c{C}}ataly{\"u}rek, {\"U}mit V and Chevalier, C{\'e}dric and Devine, Karen D},
+	Date-Added = {2014-09-05 00:43:57 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {Scientific Programming},
+	Number = {2},
+	Pages = {129--150},
+	Publisher = {IOS Press},
+	Title = {The Zoltan and Isorropia parallel toolkits for combinatorial scientific computing: Partitioning, ordering and coloring},
+	Volume = {20},
+	Year = {2012}}
+
+@article{Karypis;Kumar:98:A-parallel-algorithm,
+	Author = {Karypis, George and Kumar, Vipin},
+	Date-Added = {2014-09-05 00:40:46 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {Journal of Parallel and Distributed Computing},
+	Number = {1},
+	Pages = {71--95},
+	Publisher = {Elsevier},
+	Title = {A parallel algorithm for multilevel graph partitioning and sparse matrix ordering},
+	Volume = {48},
+	Year = {1998}}
+
+@article{Karypis;Kumar:99:Parallel-multilevel-,
+	Author = {Karypis, George and Kumar, Vipin},
+	Date-Added = {2014-09-04 23:57:34 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {Siam Review},
+	Number = {2},
+	Pages = {278--300},
+	Publisher = {SIAM},
+	Title = {Parallel multilevel series k-way partitioning scheme for irregular graphs},
+	Volume = {41},
+	Year = {1999}}
+
+@article{Theillard;Gibou;Pollock:14:A-Sharp-Computationa,
+	Author = {Theillard, Maxime and Gibou, Fr{\'e}d{\'e}ric and Pollock, Tresa},
+	Date-Added = {2014-09-04 23:56:30 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Journal = {Journal of Scientific Computing},
+	Pages = {1--25},
+	Publisher = {Springer},
+	Title = {A Sharp Computational Method for the Simulation of the Solidification of Binary Alloys},
+	Year = {2014}}
+
 @article{Tsitsiklis:95:Efficient-algorithms,
 	Author = {Tsitsiklis, John N},
 	Date-Added = {2014-09-04 00:02:00 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Automatic Control, IEEE Transactions on},
 	Number = {9},
 	Pages = {1528--1538},
@@ -24,7 +128,7 @@
 @techreport{Herrmann:03:A-domain-decompositi,
 	Author = {Herrmann, M},
 	Date-Added = {2014-09-03 23:59:22 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Institution = {DTIC Document},
 	Title = {A domain decomposition parallelization of the fast marching method},
 	Year = {2003}}
@@ -32,7 +136,7 @@
 @article{Cates;Lefohn;Whitaker:04:GIST:-an-interactive,
 	Author = {Cates, Joshua E and Lefohn, Aaron E and Whitaker, Ross T},
 	Date-Added = {2014-09-03 22:27:52 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Medical image analysis},
 	Number = {3},
 	Pages = {217--231},
@@ -45,7 +149,7 @@
 	Author = {Roberts, Mike and Packer, Jeff and Sousa, Mario Costa and Mitchell, Joseph Ross},
 	Booktitle = {Proceedings of the Conference on High Performance Graphics},
 	Date-Added = {2014-09-03 22:27:46 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {Eurographics Association},
 	Pages = {123--132},
 	Title = {A work-efficient GPU algorithm for level set segmentation},
@@ -55,7 +159,7 @@
 	Author = {Lefohn, Aaron E and Cates, Joshua E and Whitaker, Ross T},
 	Booktitle = {Medical Image Computing and Computer-Assisted Intervention-MICCAI 2003},
 	Date-Added = {2014-09-03 22:21:42 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Pages = {564--572},
 	Publisher = {Springer},
 	Title = {Interactive, GPU-based level sets for 3D segmentation},
@@ -65,7 +169,7 @@
 	Author = {Fortmeier, Oliver and B{\"u}cker, H Martin},
 	Booktitle = {High Performance Computing for Computational Science--VECPAR 2010},
 	Date-Added = {2014-09-03 22:00:43 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Pages = {200--209},
 	Publisher = {Springer},
 	Title = {A parallel strategy for a level set simulation of droplets moving in a liquid medium},
@@ -75,7 +179,7 @@
 	Annote = {this is a test},
 	Author = {Behrens, J{\"o}rn},
 	Date-Added = {2014-09-03 18:21:23 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Monthly weather review},
 	Number = {10},
 	Pages = {2386--2395},
@@ -86,7 +190,7 @@
 @article{Drake;Foster;Michalakes;etal:95:Design-and-performan,
 	Author = {Drake, John and Foster, Ian and Michalakes, John and Toonen, Brian and Worley, Patrick},
 	Date-Added = {2014-09-03 18:15:49 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Parallel Computing},
 	Number = {10},
 	Pages = {1571--1591},
@@ -98,7 +202,7 @@
 @article{Yang;Yang;Cai:14:Parallel-Domain-Deco,
 	Author = {Yang, Haijian and Yang, Chao and Cai, Xiao-Chuan},
 	Date-Added = {2014-09-03 18:15:26 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Scientific Computing},
 	Pages = {1--23},
 	Publisher = {Springer},
@@ -108,7 +212,7 @@
 @article{White-III;Dongarra:11:High-performance-hig,
 	Author = {White III, JB and Dongarra, Jack J},
 	Date-Added = {2014-09-03 18:14:21 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Computational Physics},
 	Number = {17},
 	Pages = {6778--6799},
@@ -120,7 +224,7 @@
 @article{Thomas;Cote:95:Massively-parallel-s,
 	Author = {Thomas, S and C{\^o}t{\'e}, J},
 	Date-Added = {2014-09-03 18:13:26 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Simulation Practice and Theory},
 	Number = {4},
 	Pages = {223--238},
@@ -132,7 +236,7 @@
 @article{Malevsky;Thomas:97:Parallel-algorithms-,
 	Author = {Malevsky, AV and Thomas, SJ},
 	Date-Added = {2014-09-03 18:13:10 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {International Journal for Numerical Methods in Fluids},
 	Number = {4},
 	Pages = {455--473},
@@ -144,7 +248,7 @@
 @article{Chacon;Vladimirsky:12:Fast-two-scale-metho,
 	Author = {Chacon, Adam and Vladimirsky, Alexander},
 	Date-Added = {2014-09-03 18:12:39 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {SIAM Journal on Scientific Computing},
 	Number = {2},
 	Pages = {A547--A578},
@@ -156,7 +260,7 @@
 @article{Chacon;Vladimirsky:13:A-parallel-Heap-Cell,
 	Author = {Chacon, Adam and Vladimirsky, Alexander},
 	Date-Added = {2014-09-03 18:12:36 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {arXiv preprint arXiv:1306.4743},
 	Title = {A parallel Heap-Cell Method for Eikonal equations},
 	Year = {2013}}
@@ -164,7 +268,7 @@
 @article{Jeong;Whitaker:08:A-fast-iterative-met,
 	Author = {Jeong, Won-Ki and Whitaker, Ross T},
 	Date-Added = {2014-09-03 18:11:09 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {SIAM Journal on Scientific Computing},
 	Number = {5},
 	Pages = {2512--2534},
@@ -176,7 +280,7 @@
 @article{Zhao:05:A-fast-sweeping-meth,
 	Author = {Zhao, Hongkai},
 	Date-Added = {2014-09-03 18:11:08 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Mathematics of computation},
 	Number = {250},
 	Pages = {603--627},
@@ -187,7 +291,7 @@
 @article{Detrixhe;Gibou;Min:13:A-parallel-fast-swee,
 	Author = {Detrixhe, Miles and Gibou, Fr{\'e}d{\'e}ric and Min, Chohong},
 	Date-Added = {2014-09-03 18:10:36 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Computational Physics},
 	Pages = {46--55},
 	Publisher = {Elsevier},
@@ -198,7 +302,7 @@
 @article{Zhao:07:Parallel-implementat,
 	Author = {Zhao, Hongkai},
 	Date-Added = {2014-09-03 18:10:19 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {JOURNAL OF COMPUTATIONAL MATHEMATICS-INTERNATIONAL EDITION-},
 	Number = {4},
 	Pages = {421},
@@ -210,7 +314,7 @@
 @article{Breus;Cristiani;Gwosdek;etal:11:An-adaptive-domain-d,
 	Author = {Breu{\ss}, Michael and Cristiani, Emiliano and Gwosdek, Pascal and Vogel, Oliver},
 	Date-Added = {2014-09-03 00:38:21 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Applied Mathematics and Computation},
 	Number = {1},
 	Pages = {32--44},
@@ -223,7 +327,7 @@
 	Author = {Fortmeier, Oliver and Bucker, H Martin},
 	Booktitle = {High Performance Computing and Communications (HPCC), 2010 12th IEEE International Conference on},
 	Date-Added = {2014-09-03 00:37:16 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE},
 	Pages = {114--121},
 	Title = {Hybrid distributed-/shared-memory parallelization for re-initializing level set functions},
@@ -232,7 +336,7 @@
 @article{Fortmeier;Martin-Bucker:11:Parallel-re-initiali,
 	Author = {Fortmeier, Oliver and Martin B{\"u}cker, H},
 	Date-Added = {2014-09-03 00:36:49 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Computational Physics},
 	Number = {12},
 	Pages = {4437--4453},
@@ -244,7 +348,7 @@
 @phdthesis{Tugurlan:08:Fast-marching-method,
 	Author = {Tugurlan, Maria Cristina},
 	Date-Added = {2014-09-03 00:36:33 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	School = {Louisiana State University},
 	Title = {Fast marching methods-parallel implementation and analysis},
 	Year = {2008}}
@@ -252,7 +356,7 @@
 @article{Han;Hu;Adams:14:Adaptive-multi-resol,
 	Author = {Han, LH and Hu, XY and Adams, NA},
 	Date-Added = {2014-09-03 00:35:56 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Computational Physics},
 	Pages = {131--152},
 	Publisher = {Elsevier},
@@ -263,7 +367,7 @@
 @article{Appleyard;Drikakis:11:Higher-order-CFD-and,
 	Author = {Appleyard, J and Drikakis, D},
 	Date-Added = {2014-09-03 00:35:23 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Computers \& Fluids},
 	Number = {1},
 	Pages = {101--105},
@@ -276,7 +380,7 @@
 	Author = {Hagan, Aaron and Zhao, Ye},
 	Booktitle = {Advances in Visual Computing},
 	Date-Added = {2014-09-03 00:35:08 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Pages = {960--969},
 	Publisher = {Springer},
 	Title = {Parallel 3D image segmentation of large data sets on a GPU cluster},
@@ -285,7 +389,7 @@
 @article{Herrmann:10:A-parallel-Eulerian-,
 	Author = {Herrmann, Marcus},
 	Date-Added = {2014-09-03 00:34:20 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Computational Physics},
 	Number = {3},
 	Pages = {745--759},
@@ -297,7 +401,7 @@
 @article{Sussman:05:A-parallelized-adapt,
 	Author = {Sussman, Mark},
 	Date-Added = {2014-09-03 00:34:01 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Computers \& structures},
 	Number = {6},
 	Pages = {435--444},
@@ -309,7 +413,7 @@
 @article{Hajihashemi;El-Shenawee:10:High-performance-com,
 	Author = {Hajihashemi, Mohammad R and El-Shenawee, Magda},
 	Date-Added = {2014-09-03 00:33:46 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Parallel and Distributed Computing},
 	Number = {6},
 	Pages = {671--679},
@@ -321,7 +425,7 @@
 @article{Wang;Chang;Kale;etal:06:Parallelization-of-a,
 	Author = {Wang, Kai and Chang, Anthony and Kale, Laxmikant V and Dantzig, Jonathan A},
 	Date-Added = {2014-09-03 00:30:35 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Journal of Parallel and Distributed Computing},
 	Number = {11},
 	Pages = {1379--1386},
@@ -333,7 +437,7 @@
 @article{Rodriguez;Sahni;Lahey-Jr;etal:13:A-parallel-adaptive-,
 	Author = {Rodriguez, Joseph M and Sahni, Onkar and Lahey Jr, Richard T and Jansen, Kenneth E},
 	Date-Added = {2014-09-03 00:30:21 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {Computers \& Fluids},
 	Pages = {115--131},
 	Publisher = {Elsevier},
@@ -344,7 +448,7 @@
 @article{Bangerth;Burstedde;Heister;etal:11:Algorithms-and-data-,
 	Author = {Bangerth, Wolfgang and Burstedde, Carsten and Heister, Timo and Kronbichler, Martin},
 	Date-Added = {2014-09-03 00:29:17 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {ACM Transactions on Mathematical Software (TOMS)},
 	Number = {2},
 	Pages = {14},
@@ -357,7 +461,7 @@
 	Author = {Langer, Akhil and Lifflander, Jonathan and Miller, Phil and Pan, Kuo-Chuan and Kale, Laxmikant V and Ricker, Paul},
 	Booktitle = {Computer Architecture and High Performance Computing (SBAC-PAD), 2012 IEEE 24th International Symposium on},
 	Date-Added = {2014-09-03 00:28:46 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE},
 	Pages = {100--107},
 	Title = {Scalable Algorithms for Distributed-Memory Adaptive Mesh Refinement},
@@ -367,7 +471,7 @@
 	Author = {Burstedde, Carsten and Ghattas, Omar and Gurnis, Michael and Stadler, Georg and Tan, Eh and Tu, Tiankai and Wilcox, Lucas C and Zhong, Shijie},
 	Booktitle = {Proceedings of the 2008 ACM/IEEE conference on Supercomputing},
 	Date-Added = {2014-09-03 00:28:29 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE Press},
 	Pages = {62},
 	Title = {Scalable adaptive mantle convection simulation on petascale supercomputers},
@@ -377,7 +481,7 @@
 	Author = {Tu, Tiankai and O'Hallaron, David R and Ghattas, Omar},
 	Booktitle = {Supercomputing, 2005. Proceedings of the ACM/IEEE SC 2005 Conference},
 	Date-Added = {2014-09-03 00:28:11 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE},
 	Pages = {4--4},
 	Title = {Scalable parallel octree meshing for terascale applications},
@@ -386,7 +490,7 @@
 @article{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-algo,
 	Author = {Burstedde, Carsten and Wilcox, Lucas C and Ghattas, Omar},
 	Date-Added = {2014-09-03 00:26:34 +0000},
-	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Journal = {SIAM Journal on Scientific Computing},
 	Number = {3},
 	Pages = {1103--1133},
@@ -394,3 +498,32 @@
 	Title = {p4est: Scalable algorithms for parallel adaptive mesh refinement on forests of octrees},
 	Volume = {33},
 	Year = {2011}}
+
+@misc{Balay;Abhyankar;Adams;etal:14:PETSc-Web-page,
+	Author = {Satish Balay and Shrirang Abhyankar and Mark~F. Adams and Jed Brown and Peter Brune and Kris Buschelman and Victor Eijkhout and William~D. Gropp and Dinesh Kaushik and Matthew~G. Knepley and Lois Curfman McInnes and Karl Rupp and Barry~F. Smith and Hong Zhang},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Howpublished = {\url{http://www.mcs.anl.gov/petsc}},
+	Title = {{PETS}c {W}eb page},
+	Url = {http://www.mcs.anl.gov/petsc},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.mcs.anl.gov/petsc}}
+
+@techreport{Balay;Abhyankar;Adams;etal:14:PETSc-Users-Manual,
+	Author = {Satish Balay and Shrirang Abhyankar and Mark~F. Adams and Jed Brown and Peter Brune and Kris Buschelman and Victor Eijkhout and William~D. Gropp and Dinesh Kaushik and Matthew~G. Knepley and Lois Curfman McInnes and Karl Rupp and Barry~F. Smith and Hong Zhang},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Institution = {Argonne National Laboratory},
+	Number = {ANL-95/11 - Revision 3.5},
+	Title = {{PETS}c Users Manual},
+	Url = {http://www.mcs.anl.gov/petsc},
+	Year = 2014,
+	Bdsk-Url-1 = {http://www.mcs.anl.gov/petsc}}
+
+@inproceedings{Balay;Gropp;McInnes;etal:97:Efficient-Management,
+	Author = {Satish Balay and William D. Gropp and Lois Curfman McInnes and Barry F. Smith},
+	Booktitle = {Modern Software Tools in Scientific Computing},
+	Date-Modified = {2014-09-05 17:14:46 +0000},
+	Editor = {E. Arge and A. M. Bruaset and H. P. Langtangen},
+	Pages = {163--202},
+	Publisher = {Birkh{\"{a}}user Press},
+	Title = {Efficient Management of Parallelism in Object Oriented Numerical Software Libraries},
+	Year = {1997}}
